add filter to product
